	after silently whitespace were ignored.

    o	strftime() now converts its first argment with as.POSIXlt()
	and so is no longer an alias for format.POSIXLt.

    o	install.packages() now checks >= version dependencies for
	dependent packages, and so will install a newer version of a
	dependency if needed and available on the repositories.


DEPRECATED & DEFUNCT

    o	allGenerics() is defunct.

    o	Use of allocVector(CHARSXP ...) is defunct and gives an error.

    o	The compatibility define for graphics structure NewDevDesc in
	GraphicsDevice.h has been removed.

    o	Support for versioned installs (R CMD INSTALL --with-package-versions
	and install.packages(installWithVers = TRUE)) has been removed.

    o	The numeric and power(0.5) forms of argument to make.link()
	which were deprecated in 2.4.0 are now defunct: use power()
	directly.


UTILITIES

    o R CMD build now also uses a Makevars[.win] file for cleaning up
      src/.

    o	R CMD Rd2dvi and R CMD check are now able to cope with Cyrillic
    	characters in UTF-8 (thanks to a hint from Alexey Shipunov).

    o   New function rtags() in package 'utils' that provides etags-like
	indexing capabilities for R code files.

    o	New environment variable R_TEXI2DVICMD to hold the path (if any)
	to 'texi2dvi' found at configure time: this now provides the
	default to option("texi2dvi").


INSTALLATION

    o	The shell used by the 'R' script and other shell scripts run
	by 'R CMD foo' can be specified at installation time by
	setting the (precious) configure variable R_SHELL.

    o	libtool has been updated to 2.2.6a.


C-LEVEL FACILITIES

    o	A helper function, asCharacterFactor(), converts from factors to
	character vectors.


BUG FIXES

    o	The postscript() output for setting text is faster and smaller.

    o	Subsetting a data frame with duplicate column names without
	selecting columns (e.g. z[i,]) no longer makes the column
	names unique.  This was never documented, but some packages