@@ -106,6 +106,9 @@ NEW FEATURES
 	dependent packages, and so will install a newer version of a
 	dependency if needed and available on the repositories.
 
+    o	body<-() now treats list values consistently with other
+	types: they no longer need to be wrapped in a list() call.
+
 
 DEPRECATED & DEFUNCT
 
